# ct-image-diagnostics

./: .gitignore  README.md
datasets/: .gitignore
datasets/cornel/s0016/output/: 100-output.dcm  81-output.dcm  82-output.dcm  83-output.dcm  84-output.dcm  85-output.dcm  86-output.dcm  87-output.dcm  88-output.dcm  89-output.dcm  90-output.dcm  91-output.dcm  92-output.dcm  93-output.dcm  94-output.dcm  95-output.dcm  96-output.dcm  97-output.dcm  98-output.dcm  99-output.dcm  cornel_s0016_81_output.dcm  cornel_s0016_82_output.dcm  cornel_s0016_83_output.dcm  cornel_s0016_84_output.dcm  cornel_s0016_85_output.dcm  cornel_s0016_86_output.dcm  cornel_s0016_87_output.dcm  cornel_s0016_88_output.dcm  cornel_s0016_89_output.dcm  cornel_s0016_90_output.dcm
src/Common/: utilFunctions.hxx  utilFunctionsAlt.hxx
src/Registration/: BSplineDeformableRegistration.cxx  CMakeLists.txt  ImageRegistrationMethodAffine.cxx
src/Segmentation/DeformableModels/: CMakeLists.txt  CandidateNodules.txt  MSMNoduleDetection.cxx  outputNodules.txt
src/Segmentation/OtherTools/LabelMapOverImage/src/: CMakeLists.txt  OverlayLabelMapOnTopOfAnImage.cxx
src/Segmentation/OtherTools/SurfaceReconstruction/src/: SurfaceReconstruction.cxx
src/Segmentation/OtherTools/VtkPolyStats/src/: CMakeLists.txt  GenericDataObjectReader.cxx
src/Segmentation/SurfaceReconstruction/: CMakeLists.txt  SurfaceReconstruction.cxx
src/Segmentation/Thresholding/: CMakeLists.txt  OptimalThresholdCalculator.hxx  SegmentedLungFilter.hxx  ThresholdingNoduleDetection.cxx  ThresholdingNoduleDetectionMain.cxx  util.hxx
src/SegmentationOptimalThresholding/: ThresholdingNoduleDetection.cxx  itkBinaryThresholdImageFilterMain.cpp
